// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for Reset Password Functional Components RequestResetEmailForm renders without errors 1`] = `
<RequestResetEmailForm
  handleSubmit={[Function]}
  loadCompleteSuccess={true}
  loadRegistrationData={[Function]}
  location={
    Object {
      "pathname": "/2",
    }
  }
  match={
    Object {
      "url": "/url",
    }
  }
  user={
    Object {
      "resetPasswordEmailSuccess": true,
      "resetPasswordSuccess": true,
    }
  }
  userRegistrationDetails={
    Object {
      "email_address": "e@mail.com",
      "name": "Jeff Labowski",
    }
  }
/>
`;

exports[`Test suite for Reset Password Functional Components ResetPasswordForm renders without errors 1`] = `
<ResetPasswordForm
  handleSubmit={[Function]}
  loadCompleteSuccess={true}
  loadRegistrationData={[Function]}
  location={
    Object {
      "pathname": "/2",
    }
  }
  match={
    Object {
      "url": "/url",
    }
  }
  submitClicked={null}
  user={
    Object {
      "resetPasswordEmailSuccess": true,
      "resetPasswordSuccess": true,
    }
  }
  userRegistrationDetails={
    Object {
      "email_address": "e@mail.com",
      "name": "Jeff Labowski",
    }
  }
/>
`;
